--- a/.github/workflows/preprocessing.yml
+++ b/.github/workflows/preprocessing.yml
@@ -24,10 +24,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run preprocessing
-      run: |
-        python preprocessing/automate_Juan.py
-
+    - name: Run prepocessing
+        working-directory: preprocessing
+        run: python automate_Juan.py
+              
     - name: Commit and push processed data
       run: |
         git config --global user.name 'github-actions[bot]'
