--- a/.github/workflows/preprocessing.yml
+++ b/.github/workflows/preprocessing.yml
@@ -28,10 +28,8 @@ jobs:
       working-directory: preprocessing
       run: python automate_Juan.py
               
-    - name: Commit and push processed data
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add preprocessing/namadataset_preprocessing/*
-        git commit -m "Update preprocessed dataset [skip ci]" || echo "No changes to commit"
-        git push
+    - name: Upload preprocessed data
+      uses: actions/upload-artifact@v4
+      with:
+        name: preprocessed_data
+        path: preprocessing/recruitment_data_preprocessing.csv
